--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,3 +10,40 @@
     
 }
 
+.sidebar-menu ul li{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar-menu ul li a{
+    font-weight: 900;
+    font-size: 0.875rem;
+    display: block;
+    padding: 12px 20px;
+    color: #333;
+    text-decoration: none;
+    border-bottom: 1px solid #ccc;
+}
+.sidebar-menu ul li a.active{
+      background: #0ea5e9 !important;
+      color: white !important;
+}
+
+
+.sidebar-menu ul li a:hover{
+    transition: ease-in-out 0.3s;
+    background-color: #ECF4E8;
+    color: #140101;
+    transform: scale3d(1.1, 1, 1);
+}
+
+.top-nav{
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    padding: 10px 20px;
+    min-height: 70px;
+}
+
+.content-area{
+    min-height: 100vh;
+}   
